trigger gh-pages action

--- a/10.李敖节目演讲合集/李敖大哥大.md
+++ b/10.李敖节目演讲合集/李敖大哥大.md
@@ -1,4 +1,8 @@
-#《李敖大哥大》目录
+# 李敖大哥大
+
+<!-- toc -->
+
+## 目录
 
 * 一、如夫人-如院长-如国民党
 * 二、陈定南的烂谎话
@@ -49,8 +53,6 @@
 * 四七、宋楚瑜应该权谋
 * 四八、其他
 
-
-
 如夫人-如院长-如国民党
 
 “如夫人”就是细姨，小老婆，阿扁总统团队中的行政院长张俊雄，就推出他的小老婆出来辅选。张俊雄，他是“如院长”，也就是“小”院长，因为他的权力都被阿扁总统抓走了。
@@ -77,8 +79,6 @@
 
 民进党成立后，谢长廷写了一本书《民进党》。他坦承党章、党纲都是他与尤清研拟的，这些典章制度都是学国民党，人家有党主席、中常会、中常委，你民进党也有。而国民党是学共产党，看了岂不令人难过。因为民进党如果变成“小”国民党，选民进党要干嘛！所以我们不能接受“如夫人”，“如院长”，“如国民党”，因为我们已经受够了。
 
-
-
 陈定南的烂谎话
 
 陈定南的烂谎话，不但是谎话，而且是很烂的谎话。陈定南的问题是台湾最荒谬的两个现象，一个大荒谬，一个小荒谬。
@@ -100,8 +100,6 @@
 我们看冯沪祥这段话，当法务部人员建议用法律名词，“赌博嫌疑”取代“赌博行为”，可见双方共识都要防止赌博，法务部也同意如此条文。我们看得很清清楚楚，法务部并没有反对，法务部代表还参加讨论，讨论意见还被立委接受。
 
 今天你陈定南在报纸说，这个协商会议讨论《电玩法》条文修正案我们法务部反对，没有反对纪录嘛！证明什么？证明你陈定南说了谎话，很容易被我们拆穿的谎话、烂谎话，立刻被我们拆穿，所以陈定南是很可恶的一个人，今天居然能够欺世盗名，大家以为他是青天，在我李敖看起来，他绝非青天，青个屁天。
-
-
 
 打压中国？被中国打压？
 
@@ -131,8 +129,6 @@
 
 所以，阿扁想改护照，既非其时，亦非其地，所以我李敖的结论是，阿扁你的决定是荒谬的。
 
-
-
 半个璩小姐跟一个璩小姐
 
 谁是半个璩小姐，就是胡因梦。我可以告诉你胡因梦跟这个姓璩的有关系，胡因梦的妈妈就姓璩，这个姓是很少的，可是胡因梦的妈妈就姓璩。
@@ -155,8 +151,6 @@
 
 所以今天我觉得，这些人这样谴责璩美凤是有问题的。庄子有一句话表示，强盗不是好东西，可是你这个强盗头子不能责备他，因为你们是一类的人，今天我发现跟璩美凤一类的人在责备璩美凤，我就忍不住要发表这些议论。
 
-
-
 陈水扁拥抱调查局
 
 报上说陈水扁到了调查局，参加调查局的开业和结业典礼，我可以告诉各位，自所谓中华民国开国以来，自调查局成立以来，从来没有总统的身份到调查局参加开业、结业典礼，就等于是参加他们的毕业典礼一样，为什么做这个动作？蒋介石不会做、蒋经国不会做、李登辉不会做，可是，陈水扁会做。
@@ -176,8 +170,6 @@
 看到没有，对调查局来说，国家领导人莅临不是第一次，但是总统参加调查班的开结业典礼，这绝对是空前的创举，所以我们看到什么呢？他们口口声声说要摆脱外来政权，却居然要读国父遗嘱、向国父遗像行三鞠躬礼，可以走到这么原始的，这种蒋介石所留下的政治仪式，陈水扁要进入这个仪式，要不要脸啊！当然不要脸。
 
 但能改革吗？当然可以改革啊，为什么不改革？就是要拉拢这个团队，要接受这个团队所形成的背景、历史，为什么呢？它是个特务组织，它的祖先是情报局的背景、是保密局的背景，这一个特务系统，陈水扁要拉拢就是为了要抢政权，既然抢政权，好比说要拉拢经济力量，就要控制中央银行、各个银行；而要拉拢治安的力量，就更要控制调查局，陈水扁说要大幅调整调查局的组织人力，因为他和调查局一向没有渊源，所以要从体制上来掌控调查局，这也是陈水扁为何要这样，违反自己过去的诺言及言论，然后做这件连蒋介石都干不出来，连李登辉都干不出来的，“破格”拉拢调查局的行径。
-
-
 
 开小马哥的罚单
 
@@ -200,8 +192,6 @@
 为什么翁岳生会哭？因为司法官的甲等考绩只能有90%。这又是规定定额造成的，他的理由是如果法官考绩都是甲等，用名额限制是不合理的。而规定这个作法的就是行政院长张俊雄这个阿扁的走狗，因为担心甲等考绩公务员太多，才订出规定的名额出来。
 
 规定名额的作法很多，基层员警开小贩罚单，为了应付定额的开罚单张数，基层员警就开始养小贩，这样才有办法随时应付。我觉得台北市长小马哥虽然努力市政建设，但他还是要好好的向基层员警请教，开什么罚单呢？因为规定配额，弊端就会出来。此外他也要向基层员警出身的前台北市警局局长颜世锡请教，一个政府团队运作需要配额的做法吗？
-
-
 
 鞭尸两蒋-追查李登辉
 
@@ -229,8 +219,6 @@
 
 国安局30亿元秘密预算的孳息自1984年以来，被李登辉给了又老又不要脸的女人蔡英文，搞个两国论就拿900万元，然后又给刘泰英手下写报告的人2000万元。请问，这些钱是黑钱，两蒋的鬼坟则是经预算的，李登辉拿的是黑钱，更应来查。而蒋经国死后是谁负责给蒋盖坟派宪兵守灵，花这么多钱到今天？李登辉也要负责！我难得支持建国党与台联。
 
-
-
 陈文茜的情人是谁？
 
 陈文茜的情人是谁？我李敖讲的只有真理没有八卦。
@@ -249,8 +237,6 @@
 
 周伯伦说了一个重点，陈文茜用身体交换权力，用同样的标准再问周伯伦，周伯伦在陈水扁手下有没有和陈水扁有男人跟男人的关系？今天看起来这件事别人都没有资格问，陈文茜生气了，不是因为别人把事情注销来，她是生气记者怎么可以来问她个人的私事呢！
 
-
-
 国民党解散算了
 
 你们看今天晚报的新闻说游月霞哭了，还说要退出国民党，她说不是因为税务士法的法案没有过，而是因为连战被国民党高官蒙蔽，我看到这样的新闻，真的觉得国民党干脆解散算了。
@@ -266,8 +252,6 @@
 以前国民党在南京时候，党国大老戴传贤曾经说过，周朝超过800年，国民党至少可以1000年，这简直是个笑话，国民党有多久呢？国民党其实只有50年，在台湾时候的国民党，先是变成蒋介石的国民党，后来变成李登辉的国民党，他其实只有50年，所以现在的国民党党员应该登高一呼，宣布脱离国民党，从马英九到胡志强这样的党内菁英，都应该做这样的宣布。
 
 国民党宣布解散之后，才能创造更好的愿景，不然维持现在这样的局面，国民党实在让人难过，所以国民党能够解散，还可以浴火重生。
-
-
 
 做人不知忌讳-作文专知忌讳
 
@@ -290,8 +274,6 @@
 我再给大家看看另外的证据，证明我手中的《伯夷颂》是古物。《伯夷颂》是黄素小楷，古人杜衍他们在文章中，形容《伯夷颂》的材质时都有提到，再看看我手中的《伯夷颂》，是不是就是黄素小楷。这就像我们买小狗，从血统证明，可以知道它的族谱。其实也只有我这种有心人，才知道这些典故内容，现在我要把伯夷颂捐给大陆，也许是辽宁省博物馆，也许是故宫，让古物重回祖国。
 
 大家注意一下，绢本是不容易保存的，我有眼光、知识买到这份古物，然后用知识去查证。大家想想看，现代的后人，如果要造假，他也找不到950年前的绢本，也不会知道要避讳的。这是有缘人才有机会接触到此一宝物，这完全是我的学问，以及机会、智能才有可能，文物有灵，会很高兴有我这位小收藏者。
-
-
 
 宗才怡是屄皮大师
 
@@ -321,8 +303,6 @@
 
 这种疯狂的政治安排与那些疯狂玩乐透的人一样，都是蠢蛋。
 
-
-
 为泣鬼神而活
 
 昨晚我坐在这里做节目时收到一封信，我念全文给大家听，这其中可看出我和观众的互动关系。信是这样写的：李敖大师您好，您的节目收视率一级棒，观众都很欣赏，我有三点建议，这位观众署名杨正彦敬上，91年1月28日敬上。他的第1点建议，是“希望你不要在节目中挑起族群冲突，你经常说民进党与台湾人都是孬种，不敢提台独，是因为美国不支持，这是不可能的事”，“为避免你与观众在Callin起冲突，希望你不要再提为妙”。
@@ -336,8 +316,6 @@
 陈文茜讲真话，当年她在党外时代打拼的时候，其它人在那里？陈文茜小小年纪可以倚老卖老，而我李敖老了几年，也可倚老卖老，当年我反蒋介石、反蒋经国，为台湾人去坐牢，因此现在敢讲而不会出事的人，就只有陈文茜和我！
 
 当年选总统时，中选会主委黄石城要五个候选人一起照相，我坚持站中间，他问我为什么？我说，除了我年龄最大之外，我抽中第3号，原本就是站在中间，因此我坚持站中间才肯照相，照第一张时，我站中间，第二次我还是站中间，第三次时，他们其它人都出现了迟疑，那时我听到陈水扁说了一句话：“算了，让他站中间”，我看了左右各有两个人之后，我才肯照相，我绝对不吃亏！陈水扁说“算了，让他站中间”，这是我混到的特权，是我多少年才打拚到的！
-
-
 
 狗亮鸡巴人亮票
 
@@ -355,8 +333,6 @@
 
 台湾已经是个民主国家了，但是到处都让人看到民主的丑态，为了让大家知道我把票投给谁，为了让大家知道我服从党的指示或者是总统要求来投票，所以大家就亮票，但是亮票不是为了给选民交代，而是给给我权力的人交代，就像爱斯基摩狗一样，我服从人类和狗老大，所以到最后一定要亮鸡巴来示好，这就是我说的，狗亮鸡巴人亮票的行为。
 
-
-
 小马哥拆桥过河
 
 很久没有谈到小马哥了，今天我要谈谈小马哥，并且我要赞美他。很久以来我常骂小马哥，今天我要赞美他两句，第一我觉得，小马哥终于很明确地表示要与世界接轨，所以关于拼音的部份，他要采取世界所通用的，也是中国大陆所开发出来的“汉语拼音”。
@@ -372,8 +348,6 @@
 除了证明小马哥有世界性眼光外，另一方面也证明了，台湾这些口口声声要我们走出去与世界接轨的人，事实上他们头脑是很顽固的，为什么顽固呢？他们就是说，既然这个东西就是共产党发明的，所以我们就不用，请问这是什么思想啊！他们就是蒋介石的徒子徒孙，蒋介石就认为凡要是共产党都是坏的，所以蒋介石在1949年兵败山倒来到台湾，就大力推行反共教育，反共教育有两个大前提，第一，共产党是坏的，永远不会变好；第二，共产党是弱的，我们可以打败他。
 
 所以搞了这么多年的反共教育，蒋介石搞了26年，蒋经国搞了13年，父子二人搞了近40年的反共教育，即使在这两个人走后，反共的观念流传到今天，流传到这些口口声声本土化的台独分子，或是本土狂的这些人的头上，所以他们拒绝汉语拼音，他们要通用拼音，为什么呢？因为汉语拼音是共产党开发出来的，我们不要用，请问这跟蒋介石有什么不同呢？所以口口声声要清除外来政权，想不到光在一个拼音问题上，你们是这样的反共，而反共的结果却是不能与世界接轨。所以，小马哥敢在台北市用汉语拼音，我觉得这是很了不起的。
-
-
 
 阿扁靠裸女亮相
 
@@ -401,8 +375,6 @@
 
 为什么会有这种现象？孔子说过：“吾未见好德如好色者也”，换句话说，道德的力量和宣传性，赶不上裸体的女人，赶不上两性关系。过去要靠革命，现在裸体女人可以帮我们争取到更多发表自由。
 
-
-
 游锡堃问题
 
 今天要来讲“游锡堃的问题”，但首先我要来讲一件事，今天我收到一封限时信，是寄到东兴路中天电视公司，署名法务部陈缄，信打开来看，是一封打字的信，最后的署名是陈水扁的手下陈定南敬启，时间是2002年元月15日，内容是对我的节目更正与抗议，说我对其有所误会之处，但并未签名或盖章，这凭什么用打字？打字不代表签名或盖章，纯粹打字的一封信，现在我李敖公开作废，因为这根本没有礼貌，是很粗心的一封信，连基本的礼貌都没有，如果陈定南真要指正，请下次再签名来信。
@@ -418,8 +390,6 @@
 中国的文字，许慎曾写一本说文解字，共有9353个字，而大陆中华字海中写说中国字有85560个字，但有八分之一是我李敖认不出来的，而这“堃”字就死掉了！而单音字中，同音字就有好多，例如：衣服的“衣”字，同音字就有160个字，所以如果电话中要问人家姓什么，如果是“zhang”字，就要问你是“弓长张”还是“立早章”字？写法完全不一样，需要辨别清楚。
 
 而在这样英文强势的情况下是不是中文就要被消灭呢？英国在14世纪时，还是讲法文，因为当时英文还未成型，等到英文成为强大的语言之后，例如有不要脸的新闻局就在局徽上加上的“新闻局”三个字，有人不要脸就在护照上加上了英文，真是奇怪在华文的国家为何要加上英文，是不是媚外呢？
-
-
 
 张荣发定律
 
@@ -439,8 +409,6 @@
 
 现在北检说要追查上百名立委亮票，这根本是作秀嘛！小马哥当法务部长时也说要查当时立委亮票的行为，但是雷声大雨点小；现在，又换陈定南要作秀，说要查，这些都是骗人的话！
 
-
-
 为什么不说张荣发卖台？
 
 我今天要和大家坦白一件事，就是我说节目要做9月11日做满一年就不做了，现在我更有这种心情了，因为我最近发现我的记忆常常出现心口不一的状况，人家说得心应手，我说是要得心应口，但我现在出现心口不一的状况，连记别人的名字都记不起来，昨天的情况就更严重了，像以前清华大学的校长刘兆玄，我一时记不起他的名字，还有余英时也记不起来。
@@ -452,8 +420,6 @@
 我李敖相当不同意宗才怡的说法，张荣发是触犯天条，因为他是总统府资政，又是李登辉的好友，如今张荣发卖台，李登辉只轻描淡写的说“企业转来转去是正常的”，李登辉为什么不说张荣发卖台？不说张荣发是中共同路人呢？张荣发公开说台湾应该放弃戒急用忍，但是李登辉却替张荣发开脱，强调张荣发只是要赚钱，不说张荣发卖台？不说张荣发是中共同路人呢？
 
 2001年12月31日李登辉的宝贝女儿李安妮说，不认同台湾是外国人的心境，但是依照李登辉宝贝女儿的逻辑，就可以轻易驳倒李登辉。今天《中央日报》的社论，说张荣发唱衰台湾，张荣发行为卖台。陈水扁当年拿了张荣发很多钱，陈水扁和张荣发的关系是建立在总统、市长、议员之前，他们的关系建立的很早，我当年就开玩笑说，张荣发是国民党、民进党、新党之外的第四党，他通吃各政党。但是王永庆谴责政府戒急用忍的政策时，却被说成卖台的头头，所以我今天一定要来点破这个问题。
-
-
 
 民进党中第一大混蛋
 
@@ -477,8 +443,6 @@
 
 我就觉得，姚嘉文的头脑，是所有民进党政治人物中最坏的，他和周清玉是一对糊涂蛋，立场又不坚定，周清玉选县长时竟连道教的符都挂出来了，我举这些例子，就是告诉大家，混蛋处处有，可是大混蛋很少，民进党内第一大混蛋就是姚嘉文，他一生所发生谈话行为上的错误、荒腔走板、离谱是第一名。
 
-
-
 出生地条款不如射精地条款
 
 新任教育部长黄荣村开始做一项荒谬措施，关于台湾岛到底到采用何种拼音，他将用“归零”方法处理。何谓归零？即按台湾今日要走出去，台湾要进入联合国，既然如此，就要符合负责世界标准，但奇怪的是，台湾口口声声要进入入联合国，却又不接受联合国标准。
@@ -496,8 +460,6 @@
 既然台联提出生地条款，我可以来修正，即“出生地条款不如射精条款”。按中国人说法，在娘胎10月落地后即算1岁，人的生命不是从出娘胎开始的，而是从怀孕启始。而出生地条款是有流弊的，台湾男女虽属台湾人，但可能是在印度见面，上了床结了婚在当地旅馆结的胚胎，男人射精在印度旅馆里，请问这符合出生地吗？按台联伟大的标准，这也不行啊？
 
 所以他主张，为防范在外国或台湾以外地方射精、怀胎、在台湾出生，我们要求要有射精地条款。不但要追查是否生在台湾，10个月前你老爸老妈在何时上床，趴在那个草地做这动作，都要追查。大家应集思广义，加强台联这个混帐政党他们的意见，一起玩。
-
-
 
 情非得已和情何以堪
 
@@ -519,8 +481,6 @@
 
 今天台湾问题什么，不要所有坏事全做光，你游锡堃一上台，就被阿扁指使，作这种对决式的，在立法院内作硬碰硬式的表决。证明了你轻易用翻脸问题解决问题，是不对的。
 
-
-
 复议阿扁，复议无耻
 
 我今天要讲的是“复议阿扁，复议无耻”。先讲过年时候的一个小故事，我跟我的小孩说，如何追查放屁的人，有一个绕口令，可以捉拿放屁的人。财政收支划分法要复议了，国民党主席连战与亲民党主席宋楚瑜都来盯场，民进党也虎视眈眈。
@@ -535,8 +495,6 @@
 
 如果问我李敖，是否赞成国民党与亲民党联合推翻复议案，在政治上我是不赞成的，除非国亲两党有把握成功，否则国亲联合保护马英九不一定正确。若我是亲民党，我可不会和国民党玩，因为马英九太骄傲了，让他输一次，给马英九一个教训，也没什么了不起，亲民党也要一起来打倒马英九。
 
-
-
 连战绝不可能变沙达特
 
 国民党的结构就在这里，它是黑金结构，即使李登辉靠边站了，连战想统治这个政治集团，必须还继续靠着这个黑金和他合作，黑金的集团、势力是不会改的，所以连战要改是不可能，这第一点是陈履安没有想到的。
@@ -547,8 +505,6 @@
 
 可是李登辉和连战都不是革命的人物，他们是拍马屁起家的，他们都不可能变成沙达特。水浒传中，石秀被抓起来，骂说“你这个给奴才做奴才的奴才”；基本上李登辉和连战就是这样，这批人不可能做好的转变，所以陈履安的判断是错误的。结论就是，听了陈履安的讲法，我很遗憾，我这位朋友的头脑由于信了怪模怪样的宗教以后，变得越来越糟。
 
-
-
 是制造悲情，还是制造笑话？
 
 今天是二二八，五十三周年了，有的人还在炒作；有人口口声声告诉我们要走出悲情，走出悲情就要把二二八的眼泪擦干才对，他并不这么做，而是在鼓动二二八，这两者是冲突的。看到今天报上的画面：一些女孩子在这里绑着黄丝带，说“台湾之耻二二八”；请问这些小女孩跟二二八有什么关系？这黄丝带又跟台湾有什么关系？
@@ -557,15 +513,11 @@
 
 台湾什么人开始提倡注意二二八？是我李敖，是我和我的好友孟绝子先生；过去在蒋介石统治之下，白色恐怖时代不许谈二二八事变（件）五个字，文章写出来是“×××××”，意思一看就是二二八事变，所以任何文件都看不到这五个字。后来是我办《万岁评论》杂志，公开孟绝子写的文章《台湾苦难反省日》，我们才正式提出我们要面对二二八问题。可是面对并不表示要炒作族群问题，意思是二二八是历史问题，我们不要把它“×××××”。
 
-
-
 千金之子，坐不垂堂
 
 刚刚李庆华说我不坐飞机也不坐船，叫我讲出答案，答案就是两个字“怕死”；中国古代有句名言：“千金之子，坐不垂堂”，意思是很有钱人的儿子不待在很高的空屋外面，就是在很危险的场所坐着，怕屋顶掉下来，因为自己以为自己很有身价，万一死了可怎么办？
 
 我不是不相信坐飞机和坐船，而是不相信坐李登辉统治之下的飞机和船；所以我全省走透透，交通工具都是汽车。跟各位讲一个秘密，我坐过一次飞机，那次是三十九年前我从台南到台北，只有四个人在坐，台南飞机场还是碎石子路，所以飞机起飞时还相当困难。我曾经冒险犯难过，但以一次为限，后来再也不坐飞机和船。
-
-
 
 陈履安的判断力变差了
 
@@ -579,8 +531,6 @@
 
 宋朝王安石变法，当时大臣文彦博就跟宋神宗讲一句话，这句话是千古不磨的真理，他说：“陛下与士大夫治天下，非与百姓治天下也”，皇上你要治天下要透过我们这些统治阶级，要我们和你合作才能治天下，你怎么直接就把好意、力量放在百姓身上，百姓是不能够承接的。
 
-
-
 王建煊的真面目
 
 50几年前，也就是民国38年以前，除了老兵跟着国军一起来台湾的，其它外省人士要到台湾，不但要有入境证，还得有人作保才能入境，但有些人是不需要的，只要是跟国民党有生殖器关系的，都有办法入境。像我跟王建煊就很辛苦，我们都没有关系，当年我来台湾时才14岁，王11岁，我们这些跟国民党没有直接渊源的外省人，都是很辛苦来台湾的。
@@ -591,8 +541,6 @@
 
 不过，可以告慰的是，他当财政部长还不错，所以我们应该支持他选台北县长，这是好事情。
 
-
-
 调查局陪周伯伦喝花酒
 
 今天要来讲“调查局陪周伯伦喝花酒”，我指的是调查局的高干陪周伯伦喝花酒，但我要先来讲一个故事。
@@ -602,8 +550,6 @@
 昨天下午周伯伦还好意思开记者会，12年前周伯伦担任台北市议员时，荣星案他骗了厂商1600万元被抓到了，一开始被判刑9年，原本调查局也在侦办，但不晓得是什么原因，不管是周伯伦主动也好，或是调查局主动也罢，忽然间，双方竟然在一起跑到酒家去喝花酒。原本酒家还没开始营业，但为了他们却提前营业让他们喝花酒。当时书面报导指出，在押被告指调查局曾要求10%的干股，而2月19日台北市调处借提周伯伦，以XO灌酒取供，他们跑到五月花酒家继续喝酒。刑求逼供时有所闻，但从未听过也有灌酒取供，这算是什么刑求？当时的调查局长知道之后，感到震惊，后来也向当年的法务部长萧天赞报告后提前退休。原本这家酒家7点半才开始营业，但为了他们提前营业，9点之后，调查局才将周伯伦还押台北地检署，没想到坐牢的人还可以进酒家，这真是荒唐之事！而周伯伦把调查局带出去喝酒一事，曲解为灌酒取供，将他与调查局的关系搞得形象复杂，最后也只好逼得台北地检署将其交保，天下哪有这么黑暗的事，坐牢竟还可以勾结调查局一起逛酒家？
 
 当时调查局长为影响调查局士气与形象，在事件告一段落后，他决定要求退休，以承担所有的责任，今天我要来揭发周伯伦这种行径，我认为，周伯伦有问题，公正的司法单位也有问题，而周伯伦又再度召开记者会指陈文茜的种种，我觉得很好笑，也会不断地揭发周伯伦的底。
-
-
 
 周伯伦勒索A钱
 
@@ -625,8 +571,6 @@
 
 再看高等法院更三审判，周伯伦曾经发表声明，请司法单位赶快抓他。“赶快来抓我，老哥要坐牢了！”结果声明犹言在耳，周伯伦已于上月25日提请上诉，由最高法院审理。注意，这是民进党的老套，当年陈水扁也说不上诉，然后他太太提了，这不要脸极了。先做英雄好汉说不上诉，我要坐牢，然后偷着上诉，干这种事。周伯伦师承他的大师兄陈水扁这种作风，说不上诉骨子里上诉。
 
-
-
 掀掀周伯伦的底
 
 陈文茜事件，此次攻击陈文茜的就是周伯伦，就是这次立委选举掉车尾的周伯伦。
@@ -647,8 +591,6 @@
 
 12年来，从国民党的法院到民进党的法院都在包庇他，93年周伯伦被判了7年半，99年判了6年，这6年间法院为什么都不处理？所以我要掀周伯伦的底，看看民进党的立委都是这样的货色。
 
-
-
 不许小妹大-消灭小妹大
 
 陈文茜的老师贺德芬教授说，陈文茜主持节目之后，她们这种监视观察媒体的单位才锁定注意她。贺德芬说她们这个单位早就有了，不错！是早就有了，你们不跟陈文茜挂钩的时候，你们的言论根本没有人重视，就好象林重谟一样，他过去也骂粗话没有人报导，他骂了陈文茜，媒体才会注意，不是吗？
@@ -662,8 +604,6 @@
 罗文嘉说陈文茜宣布参选后，不愿响应外界要求他辞去电视广播节目的呼声，在选前10天意思性的暂停主持节目，选前1天在中选会规定的法定竞选期限后，竟然回到由李敖代班主持的文茜小妹大节目担任来宾，接受李敖的专访，种种做法其实是违反了社会的认知，也显示陈文茜抗拒不了诱惑。因为这段话牵涉到我，我要讲一讲。陈文茜按照选罢法在选前10天暂停节目，选前一天是我请她的，我是主持人，老子说了算，我请陈文茜作我来宾。我可以告诉我的小老弟罗文嘉，是我李敖请陈文茜来的，为什么不可以请她来呢？你看到TVBS看到没有，哪个节目不请候选人来呢？我眼里根本没有这些荒谬的规定，但是陈文茜很遵守，她没谈选举，罗文嘉说她抗拒不了诱惑，谁诱惑她啊？节目诱惑她，还是我李敖诱惑她啊？
 
 所以罗文嘉胡说八道，这样讲话对陈文茜很不公道。罗文嘉又说陈文茜与林重谟一样都是媒体宠儿，这句话就对了，林重谟是媒体的弱者吗？看看哪个台不找他讲话，一讲就是一大堆，这就是媒体宠儿，媒体需要这种人来胡说八道，所以他就被请来了，不是吗？看看其它媒体1次各党请1个，TVBS李涛1次请民进党2个，干什么？拿了好处啊？民进党广告下来了嘛，多少钱下来给TVBS，所以他1次给民进党2个名额。所以我们看的很清楚，媒体是被垄断的，在垄断的过程里，罗文嘉讲这样的话是非常不得体的。
-
-
 
 陈文茜错在哪里？
 
@@ -687,8 +627,6 @@
 
 现在林重谟跳出来批评陈文茜骂乡下女人、骂吴淑珍，陈文茜有骂吗？她已经懒得去解释了。乡下老太婆人很好、很爱儿女，有很多美德，现在并不是乡下老太婆出问题，而是总统夫人说了乡下老太婆的话，她不应该说这种话，陈文茜并没有羞辱人的意思，只是把情况讲给大家听，现在大家开始起哄，却把真正的论点转移开了。
 
-
-
 恭喜陈文茜
 
 首先，我要先恭喜陈文茜。陈文茜是属于绿旗梦碎的人，她做过民进党文宣部主任，操盘过民进党的选战，后来离开民进党，像李永萍、施明德、许信良都是绿旗梦碎下的梦碎者。
@@ -707,8 +645,6 @@
 
 我不相信这是林重谟的个人行为，民进党不尊重自己的人格尊严，也不尊重为民进党打拚的陈文茜的尊严，这件事，党中央一个屁也不放，民进党妇女政策中说要尊重妇女尊严，还说陈水扁把台北市变成了“善待女人的城市”，但这是尊重妇女尊严吗？请问这是善待女人的城市吗？如果要矫正，就应该从矫正林重谟开始。但这件事是不是林重谟羞辱了陈文茜呢？林重谟伤害不了陈文茜，但是，林重谟伤害了民进党。大家看到原来民进党立委是这种货色，是这种党，还狡赖是个人行为，同党立委还不敢谴责他，所以说这件事是只能羞辱到林重谟自己，也羞辱到民进党。
 
-
-
 警察国家-台湾第一
 
 台湾人常说什么什么是台湾第一，不幸的是今天我要点破所谓第一，其实是警察国家台湾第一。
@@ -724,8 +660,6 @@
 大家看看，大陆同胞与我们一样都是中国人，不是吗？好了，即使不是中国人，我们是台湾人，他们是中国人，那他们是正常外国人吗？没有。没有把他们当正常的外国人来对待，口口声声说台湾要独立，那么中华人民共和国对台独分子而言，应该就是外国人了，但现在有把他们当成外国人来看待吗？处处用法律来控制，大家看，《大陆地区人民进出台湾许可办法》、《台湾地区与大陆地区人民关系条例》、《大陆地区人民在台地区定居或居留许可办法》，都是用单行条例来控制，种种办法专门用来对付大陆地区人民的。
 
 其中有一条很有趣，叫做《具有中国血统人民声请出入境处理原则》第6条，台湾地区男子与大陆地区女子结婚，或者台湾地区女子与大陆地区男子结婚，他们在大陆地区所生子女，申请出入境时，适用大陆地区人民之规定。也就是说，台湾人在大陆生的小孩，通通是大陆人，不算是台湾人。可是我们看依照中华民国国籍法，有下列各款情事之1者，属中华民国国民，第2条第1款第1项，出生时父或母为中华民国国民，即为中华民国国民，可是这不适用在大陆出生的小孩。中华民国的国籍法，适用于美国，甚至菲律宾等外国，现在为了排斥大陆却公然违反国籍法，这是什么国家？根本就是警察国家。因为用警察国家的标准专门对付大陆同胞，今天我们说要开放两岸观光，我告诉你，我李敖拿到最机密的文件，就发现里面层层设卡，搞什么鬼呢？夜里10点钟要回饭店，为了监视他们，10点以后就不准出去观光了，请问这是什么国家？全世界有这种规定吗？连警察国家都没有，但台湾却闹了大笑话。
-
-
 
 李涛罪在哪里？
 
@@ -748,8 +682,6 @@
 我的好朋友许信良曾经说过，群众的年纪只有5岁，这代表什么呢？代表民众是会有很暴力、很没理性的反应的。李涛的节目周一到周五，天天播出，这就叫民粹亡国，call-in亡国，李涛是聪明人，怎么会不知道这个道理？所以这是李涛的罪过，也是李涛的老板邱复生的罪过。是什么人给了5岁群众作乱的机会？就是这些人。
 
 所以我在这里一定谴责李涛，你李涛站在第一线，直接面对民众，当民众不再是你喊安静就可以控制的，你就要检讨不要再把节目作得这么荒腔走板了，这样只会让台湾继续向下沉沦罢了。所以在这里，我要喊李涛一声涛哥，李涛罪过在哪里？你要好好想一想。
-
-
 
 连宋会后的省思
 
@@ -775,8 +707,6 @@
 
 另外，民进党不是宣传台独万万岁吗？为何不搞台独，现在总统是陈水扁，且立院是多数，为何不台独。看看陈水扁用的人陈师孟，中央银行副总裁，他抨击民进党新政府不敢实现台独，十分力只敢用一分。连他们窝里的人都说不敢实现台独，台湾共和国、台湾民主国来啊！不敢。我真为台湾人可怜，陈水扁这些人都是骗子，抢了政权根本不敢搞。
 
-
-
 连战该不该下台
 
 国民党主席连战今天讲了句话，他为了国民党败选，感到歉意。他在中常会说：“万方有罪，罪在党主席”。这个口气都是过去专制时代皇帝在有天灾人祸、闯了什么祸后，下诏罪己的口气，说万方有罪，全在我一个人身上。连战表示，所有国民党败选的责任，都由他一个人承担。
@@ -790,8 +720,6 @@
 当时的国策顾问，觉得李登辉根本不用下台，而这个理由今天说得清清楚楚。所以今天台湾有三个解读，就是对民进党而言，当他的党主席带队大获全胜后，赢了选举也要下台；李登辉输了选举，也要下台，可是人家讲出更多理论说不用下台，毕竟我们知道，李登辉宣布是不下台的，他说他离开了，党主席任期若不做完，会被他人捡到国民党资源，指的就是宋楚瑜。
 
 李登辉信誓旦旦说要在任期里做完，却忽然下台，难道是小马哥或国民党中央党部前一群乌合之众能逼下李登辉？能逼下李登辉那种好战、好斗的个性？我讲过，是老美逼他下台；若今天老美没逼连战下台，在这个逻辑内，连战却可不下台，整个解读就是既可下台又可不下台，对国民党说起来，的确如此；但对民进党说起来，标准就更严格，民进党的党主席因为胜选而下台，陈水扁未免欺人太甚。
-
-
 
 卖牙签的希特勒
 
@@ -810,8 +738,6 @@
 这次选举查贿选，选前国民党副主席吴伯雄质疑，陈水扁在总统府招待选民，茶点超过30元的数倍，为何陈定南不办呢？这次台湾有很多贿选，可是陈水扁叫他的走狗陈定南怎么做？要他有些可以抓，有些不能问，你以为台湾问题复杂，全都因为意识型态，错了，关键在贿选。台湾选民喜欢被买，你贿选，他才认定你是玩真的，这次抓不抓贿选全都因人而异，台联当选有哪些人不是靠贿选的，检察官到处搜，选择性办案还栽赃，法律只是陈水扁的玩物，阿扁助讲超过规定时间，现场执法人员不开单，放过他，台湾真的出问题了，这就是公平、民主选举吗？都是假的，只有民进党夺权成功是真的，卖牙签的希特勒在台湾成功了，靠着欺骗当了总统，一年多搞得人民上气不接下气，搞得社会乌烟瘴气，台湾民众居然使第二大党成为第一大党，阿扁赤手空拳夺天下，靠选举，阿扁在台湾称了王，掌握执政优势后，台湾却越来越沉沦了。
 
 只是台湾没前途，不等于阿扁当不成总统，民进党还是可以执政，当初我为何支持王八蛋，我要打倒龟儿子，就要联合王八蛋，今天龟儿子打败了，王八蛋却高速变成龟儿子，这次选举结果很清楚，从12月1日起，王八蛋政权就是卖牙签的希特勒，阿扁他的野心、胡闹导致台湾万劫不复，台湾没有明天了！
-
-
 
 宋楚瑜！好胆麦走
 
@@ -835,8 +761,6 @@
 
 今天立法院里，亲民党做老三是最值钱的，对整个情况是最有利益的。可是要想做老三，这个团队不松懈、不内斗、不被别人利诱、不被别人收买，宋楚瑜亲自坐镇立法院，像英国丘吉尔一样，母鸡在这里，小鸡你会乱来吗？这样亲民党才有前途。宋楚瑜不愿意，为什么不愿意呢？连战不在第一线，在制高点上；谢长廷不在第一线，在制高点上。第一线会遇到一些杂碎人物，中国一句话，近庙欺神，庙离你太近，庙里的神明都会欺负他，你跟他没有距离。宋楚瑜有宫廷身段，不愿意进来，可是这时候由不得他，我们要逼他进来，对整体台湾民主政治有好处，使国会走向内阁制。
 
-
-
 清官误人
 
 我今天要讲的题目是“吕秀莲受过什么刑？”吕秀莲在去年说过她在美丽岛事件遭到刑求，比起我们这些当年的政治犯，美丽岛事件还有公开审判，她如果有什么委屈，其实可以公开讲，为什么当年不公开讲？去年总统大选时，她对外说遭到刑求，她还引用前苏联知名作家索忍尼辛一本有名的书《古拉格群岛》的内容，说书本内容有什么刑求酷刑，她都曾经遭遇过。我当时就搓破她的假象，如果真的遭到古拉格群岛的酷刑，她今天不会那么“美丽”。
@@ -848,8 +772,6 @@
 讲到清官，我现在要提的例子是，看看这张照片，此人是前新竹市长施性忠的儿子，也就是说他是代父出征。施性忠当年在担任市长时，拆了新竹火车站前的大违建，当时的省主席李登辉还下命令要求他暂缓拆除，但是施性忠照拆，最后就惹来四件官司。看看72年8月29日新竹地检署的文件，署名是新竹地检署检察官高新武，就是侦办施性忠贪渎案的检察官。高新武是谁？他是这次新党立委选举的操盘人，也是新党在高雄市参选的立委提名人。我告诉大家，这个案子典型就是政治问题法律解决。高新武起诉施性忠，其中侵占捐款、慰问金、图利自己、图利国库等等，侵占部分，法官判处施性忠无罪，但是贪渎部分，因为图利他人经判决确定，因此无法参选，直到今天。这也是施性忠无法参选，只好儿子代父出征参选。
 
 我这里有一篇当时担任立委的陈水扁，以“无法天师，无法参选”，呼吁不能不让施性忠参选。陈水扁当时呼吁不能封杀施性忠，现在当上总统了，现在要还人家公道吗？当年施性忠会因为贪渎案遭判刑，导致无法参选，这就是法律配合政治，我告诉大家，新党的高新武、谢启大，我都承认他们是清官，但是请记得，老残游记中的清官是如何以刑求陷害贾魏氏？然后对照施性忠，当年多少人说不能剥夺他的参选权利，这些人中的黄主文、尤清、陈水扁都曾经撰文支持施性忠，但是现在他们兑现了当年说过的话了吗？
-
-
 
 让强者比赛获胜
 
@@ -867,8 +789,6 @@
 
 新党这样的弃保广告，污蔑我跟李庆华，这太糟糕了，我的感受不能不说出来。
 
-
-
 中天言论最自由
 
 今天我的好朋友新党市议员费鸿泰宣布要加入国民党，真真正正实行郁慕明的“三合一”构想，要在选后投奔国民党。
@@ -883,8 +803,6 @@
 
 我们再来看看今天的晚报也报导，民视和三立总动员，原因是什么呢？是他们的老板要选立委。请问大家，蔡同荣是不是民视的老板？这时候你贺德芬在哪里？为什么这时候你就不讲话了？只会点名陈文茜？在我来看中天比台视、民视还要客观，因为我李敖可以在中天骂老板，骂国民党，即使中天有一半的国民党股份，国民党也不能干涉我李敖骂国民党，这就是中天比民视、比台视还有言论自由的地方。
 
-
-
 秀一下我的老本行
 
 年纪大的观众看电影曾经看过一个很有名的女明星跳脱衣舞，她第一次跳的时候，很害怕，只秀了一下舞衣的肩带，露了一下，但大家都很高兴，拍手叫好，这就是脱衣舞娘的故事，是美国很有名的女星吉普赛罗斯李。
@@ -896,8 +814,6 @@
 我的老本行，通常一般人很难看到像我这样看那么多的书，但都不会变成书呆子，一般人如果看许多书，大都会成为书呆子，任何人如果有我李敖看书的10%，恐怕都会变成书呆子了，但我的本领很大，因为我看书都会加以灵活运用，这是我很小的时候就已经会的本事。小学时就有一首木兰诗：“唧唧复唧唧，木兰当户织，不闻机杼声，唯闻女叹息。”当时老师说，木兰在织布，在房间里面织布，但忽然听不到织布声，只听到叹息声，为何她会叹息，因为她要代父从军，老师解说，唧唧是织布声，但我站起来反对，我认为唧唧是叹息声，应该是叹息又叹息。我举例说，几天前老师教我们白居易的《琵琶行》，其中“我闻琵琶已叹息，又闻此语重唧唧，同是天涯沦落人，相逢何必曾相识？”，这里的“唧唧”是叹息，因此我认为“唧唧复唧唧”也应该是叹息声，老师一听吓一跳说，我为什么可以将书念得那么活。
 
 何炳棣认为老子在孙子之后，也有人曾研究孔子到老子那边去拜学，但有人并不认同，反驳一位是儒家、一个是道家，而何炳棣研究指出，孙子更早前于老子，他的论点是说，孙子的文章较为细致，而老子较为粗略，认为是后出的原故，但我的看法刚好相反，我认为粗略在先、细致在后才对，因为孙子的文章比老子细密，因此孙子应该是在老子之后。过去胡适也曾与人辩论老子是在孔子之后，胡适举出唐朝李商隐的诗，认为这感觉很像明朝的词，但纯从文字来看根本不正确，总之根据史记记载应该可信，老子应在孔子之前，而我对于何炳棣的研究说法持保留态度，我认为研究的方向一错误，很可能变成白考证了！
-
-
 
 钱没到手怎么A
 
@@ -914,8 +830,6 @@
 现在整个问题非常明显的出现了，李庆华接任党主席时，党留给他3000多万元，之后收进来5000多万元，李庆华移接的时候还剩下4000万元，非常简单的数学问题，李庆华何来把新党的9000万元糟蹋掉？新党从来没有过9000万元，累积在一起也没有那么多，何来钱给李庆华去A或去糟蹋？没有这个事实嘛！这就是我所说的，钱没到手怎么A？钱没到手怎么花？钱没到手怎么浪费？
 
 今天新党这样不厚道的扣住李庆华的帽子，李庆华是新党的创党元老，7个元老之一，你谢启大是小辈后辈，人家打天下之后才进来享受资源，你们是这样对待新党的前辈，这样的血口喷人，可以这样吗？如果李庆华搞错了，A了钱不对，为什么不追究啊，为什么不告他呢？谢启大不告他，为什么前任党主席郝龙斌不告李庆华呢？如果李敖欠了1500万元，为何不向我要呢？我今天给大家看看证据，新党根本没有过9千万元，所以“钱没到手怎么A”。
-
-
 
 谢启大血口喷人
 
@@ -939,8 +853,6 @@
 
 谢启大是法官啊，法官要讲公正、求证，怎么可以这样讲话？岂可偏执地论证别人有什么罪，就开始惩罚、宣传？幸好我不是被告，我是被告还能活吗？简直是血口喷人。新党在谢启大的领导下，做事如此赶尽杀绝，也太不敦厚了，不是吗？
 
-
-
 我要吻张昭雄
 
 我今天要讲的题目是：“我要吻张昭雄。”
@@ -960,8 +872,6 @@
 然后张昭雄又说了，国、民合作是两个烂苹果，讽刺一个酸一个臭，加起来打果汁也不会变甜，认为郁慕明提的三合一是幻想。然后酸苹果又闯了祸，大家又攻击他，然后张昭雄又圆烂苹果，把话说的缓和一点，说政府落后民间，并非批评某政党，把烂字移花接木转到政府身上去。
 
 可是我认为张昭雄没有说错，张昭雄从泛宋军到烂苹果，说的都很准确，不是吗？宋楚瑜选总统差30万票，这些票如果不是选前小马哥跟胡志强说连战民调领先宋楚瑜很多，这些老国民党就会把票投给宋楚瑜，大家相信小马哥，于是把票投给连战，结果票开出来，宋楚瑜领先连战很多。所以新党谈三合一这个问题要解决，所以张昭雄说对了，可是说真话以后遭受压力谴责与污蔑嘲笑，于是开始更正道歉，我觉得是没有必要的，所以我今天李敖站出来鼓励张昭雄。张昭雄你对了，我kiss你一下！
-
-
 
 宋楚瑜应该权谋
 
@@ -986,8 +896,6 @@
 我的意思是，阿扁小气没关系，我今天将他一军，叫宋楚瑜做行政院长救台湾，看阿扁怎么打这个牌，我把这整个构想讲给宋楚瑜听。
 
 宋楚瑜有没有同意我的建议，我不告诉你，我只告诉你们，他今天的表现和昨天的谈话，证明了他就要实现李敖的建议，这就是李敖的权谋。这个权谋对台湾是好的，如果我们没有弹性、糊里糊涂来处理这个问题，我认为这称不上是好的政治人物。我认为宋楚瑜应该权谋，太权谋不是不好，而是好的，因为只有政治人物的权谋，才能解决台湾问题，其它政治人物连权谋都谈不上，是一群笨蛋。
-
-
 
 其他
 
@@ -1107,6 +1015,3 @@
 阿扁楞了一下，他还是害怕。他不敢和我和许荣淑联合起来一起宣布组党，那时最危险的是我跟许荣淑，因为我们没有坐牢嘛，会被捉起来，你坐了牢嘛，死猪不怕开水烫，在牢里还怕被捉吗？他不敢！
 
 所以阿扁没有介入组织新党的活动，后来我们看得很清楚，阿扁出狱后才加入民进党，那时候民进党才组成。但是如果我们在阿扁入狱之前救组党，就比民进党还早突破党禁。可见阿扁是不敢的，所以阿扁坐牢跟组党是没有关系。可是他在这段话里面公然说谎，没有这段事情，这是一段捏造的历史，所以我的结论是阿扁冒充政治犯，跟李登辉一样，被我李敖逮到揭发。
-
-
-
