format md in 10

--- a/10.李敖节目演讲合集/李敖秘密书房.md
+++ b/10.李敖节目演讲合集/李敖秘密书房.md
@@ -1,4 +1,8 @@
-#《李敖秘密书房》目录
+# 李敖秘密书房
+
+<!-- toc -->
+
+## 目录
 
 * 一、秘密书房泄密了
 * 二、秘密书房秘密宝
@@ -28,9 +32,7 @@
 * 二六、中天书坊——李敖书房（下）
 * 二七、对话学习专家戴维思
 
-
-
-秘密书房泄密了
+## 秘密书房泄密了
 
 李敖来了，红夹克又来了，可是《李敖笑傲江湖》不来了。为什么？《笑傲江湖》做满了一千集，我们认为应该告一段落，我们重新推出《李敖秘密书房》。《李敖笑傲江湖》是在摄影棚录制的，那个场面很壮观。可是比起《李敖秘密书房》来，在李敖书房里面录制，当然差得多了。这个意思就是说，我们的节目在精益求精，更在转变，更重要的是，请各位进入我的家，在李敖的秘密书房里面，来了解更多的秘密。有一点不同的是，因为是在我家录制，所以我会开玩笑：出了门以后，我概不认帐，在摄影棚录的，由真相负责。现在在我家录的，出了门以后，我概不负责。
 
@@ -54,9 +56,7 @@
 
 所以我跟大家，今天开放了这个秘密书房的一部分给大家看，就是告诉各位，有秘密，可是秘密是辛辛苦苦累积起来的，并不是靠著空头的买很多书放在那里，这个不行的。这些书跟我都有很多感情，甚至有些书跟我还有单独的一些故事。最后我把《李敖秘密书房》这个节目的型态跟大家讲一下，《李敖秘密书房》的播出时间比那一千集的《李敖笑傲江湖》，每天播出的时间要多一倍。前半段的时间是我一个人坐在这个椅子上面，坐在书桌前面，跟大家上下古今，洩露别人的和我的秘密，后半场是用我现在书房做為空间，请来男女老少、牛鬼蛇神，跟我在一起上天下地，又聊天，又辩论。所以《李敖秘密书房》里面，可以看到我一个人的表演，也可以看到我把这个门打开，来宾跟我的一些争执。所以非常好看，希望大家按时收看。
 
-
-
-秘密书房秘密宝
+## 秘密书房秘密宝
 
 李敖秘密书房又来了！
 
@@ -83,8 +83,6 @@
 我再给大家看一个东西，看到没有，中国青年党惩戒法。注意喔，这是十四年5月，印于巴黎。1925年巴黎印的东西，油印的.当时青年党的内部东西，油印的，都在我李敖手里，你知道我李敖本领大吗？请大家看看这里面一条，他们的惩戒法，党员惩戒了以后，他们可以，第三条说，惩戒的时候分四级十二种的惩戒方法：一等惩戒方法，看到没有，处死。天吶！这是什么党啊，你加入这个党，它把你处死，可以这样搞的。证明了当年这些中国的这些爱国的仁人志士们，他们会干出什么事情来，可想而知。所以我们看到国民党的残忍，共產党的残忍，也不要忘了当时被打压的一个小党，青年党，更残忍，它有死刑的条款伺候你。
 
 我举这个例子使大家了解一下，李敖秘密书房的一些秘密。
-
-
 
 时下青年看爱情
 
@@ -218,9 +216,7 @@
 
 蔡：我觉得这问题不多言。
 
-
-
-从少到老看图识人
+## 从少到老看图识人
 
 李敖秘密书房！
 
@@ -245,8 +241,6 @@
 可是我讲这个的意思，给大家一个参考，参考的一点就是看到他们的变化，人的这个变化。这个变化里面有一点有趣的现象，就是有的变化是可以经过时间把它，用美容的方法慢慢的把它减低的，有的时候就不能减低，所以这就是为什么讲到化妆品的用处。请大家看这个电影明星，琼考琳丝。前一阵子台北还有她的《朱门恩怨》连续剧，女明星。她跟我同岁，她的电视画面是这个样子的。不化妆就变成这个样子，看到没有，很有趣，看到一个人不化妆变成什么结果，今天我们可以看到。
 
 我们，像我李敖这种人，六十四岁了，要面对从幼年，少年，青年，中年，走向老年。我们看到这些照片真是有某种程度的怵目惊心，可是也知道是不可避免的。可是看到了这种琼考琳丝这种照片以后，才知道，噢！原来已经这个样的时候，可以化妆成这个样子。所以在某种程度之下，我李敖可能也该去到美容院走一走了。
-
-
 
 李敖陈文茜干上了
 
@@ -458,9 +452,7 @@
 
 呵呵呵呵……
 
-
-
-我把女人灵化了
+## 我把女人灵化了
 
 特别来宾：
 
@@ -570,9 +562,7 @@
 
 李：清朝的诗人赵翼讲：江山代有才人出。这意思就是说，一个世代里面，这种出类拔萃的人其实很少会出现的，所以我们才希望他会出来。同样的一个年轻人、大学生的族群里面，也很少有出类拔萃的人出现。今天我看到政大的小朋友、台大的小朋友能够有这么优秀的出现，感到很高兴。
 
-
-
-上台一鞠躬
+## 上台一鞠躬
 
 特别来宾：
 
@@ -758,9 +748,7 @@
 
 李：谢谢你大师，谢谢你，你抬举我，谢谢你，谢谢。
 
-
-
-李敖开天眼（上）
+## 李敖开天眼（上）
 
 李敖：今天李敖秘密书房请来一位我可能反对的客人，虽然这位客人是我所佩服的。他就是台大教授，也是台大教务长李嗣涔教授。他比我小二十岁，他是台大电机系毕业的，后来在美国念书，是在学术界非常有成就的。可是在我看起来，他可能有一点点转向了。原因啊，他不在电机本行，他虽然本行他非常有成就，他另外做了一个我们所谓了解我们人本身的超能力这方面的研究。我记得我念古书的时候，看到我们说孝女缇萦，缇萦救父。缇萦的父亲是个有名的中医，他有一个本领，就是能够看到墙以外的那边的人，就是隔了一个墙，可是他的眼睛能够穿墙过去，看到墙以外的人。因为他有这个本领，所以大家给他看医的时候，等于他看人体就好像X光一样。所以他给人看病的时候也按脉，按脉的时候，他说特以诊脉为名耳，我给你按脉是形式上给你按脉，骨子里面他也看到你的五脏六腑。当时我们看到中国的古书里面这种记载，觉得不可思议，觉得是荒谬，觉得是迷信，到今天我也无法解释。可是在李教授面前，我们觉得我们很愿意向他请教这些事情到底怎么回事？欢迎你，李教授。
 
@@ -896,9 +884,7 @@
 
 因为我们所看到的现象是存在的，但是科学完全没有办法解释，那就表示我们对这个世界是还有很大的缺憾，不了解。一旦我们了解，我们能掌控那个power，我们用机器来做，我们就不要用人来做。我们21世纪，就像我们现在20世纪看19世纪一样，觉得它非常落后。我相信到21世纪末期，我们回头看20世纪我们现在，就觉得实在太落后了，人类太无知了。
 
-
-
-李敖开天眼（下）
+## 李敖开天眼（下）
 
 李敖：孔子讲说：“敬鬼神而远之”，可是他在生病的时候就说：“丘祷之久矣”──我自己也祷告过。因为古人相信生病的时候是鬼在身上作祟，大家对鬼神的了解没有什么改变，这么多年没改变，直到你们这些人物出现，才要用科学方法证实一些事情。我请问你，你是用什么方法证实有鬼？
 
@@ -1078,9 +1064,7 @@
 
 李敖：非常高兴，今天你帮我开了天眼，谢谢，谢谢。
 
-
-
-美丽岛后二十年（上）
+## 美丽岛后二十年（上）
 
 特别来宾：
 
@@ -1210,9 +1194,7 @@
 
 李：我们可以这样解释就是，在战场上，人家在战场上作战，他们在枪林弹雨中捡战利品，当然也很冒险，以為捡了战利品了。可是我的意思，那是冒什么险呢？大不了做律师的资格出了问题，可是我举个例子，像蓬莱岛那个案子的一个例子里面，最后陈水扁被判了一年，阿扁判了一年，按照律师法判了一年律师资格就注销了，你记不记得，要注销。可是那时候私下就谈判，就国民党愿意只要你上诉，我就给你减刑，减到八个月或者十个月，使你律师资格会保留，因为律师资格对阿扁太重要了，因为阿扁出道就靠着张荣发，你懂我意思吧。他做立法委员的时候，后来做了有十四个助理到十九个助理，哪来这么多钱啊？就是张荣发这些财团支持他。如果律师资格没有，对阿扁伤害很大，所以他们就私下谈判。可是阿扁表示说：“我不要上诉！我不肯上诉！”所以阿扁表示态度很强硬，表示我宁肯坐牢不上诉。可是阿扁出了一次美国，这边的老婆上诉，阿扁太太上诉。我就责备谢长廷，那时候谢长廷是阿扁的律师嘛，我说：“你们怎么可以这样骗我们呢？因为按照刑事诉讼法配偶是可以上诉的，可是阿扁现在明白表示出来我不上诉，我太太也不给我上诉，然后太太给他上诉，违背当事人的公开表示的意愿，你在耍我们嘛！”谢长廷等于认错，就觉得他处理得不好。结果呢，还是上诉，阿扁就变成八个月。我的意思，你不可以这样子，里子也要，面子也要。可是许信良就不一样，许信良他就不上诉，然后许信良夫人根本就不上诉，坐牢就坐牢。这怎么比较呢？比较起来就觉得许信良这么做是对的，你没有骗我们，你说不上诉就不上诉，阿扁你骗我们。可是谁来澄清这个事实呢？谁来追究这个事实呢？现在台湾只剩下一个人，就是我，还在算这些帐。
 
-
-
-美丽岛后二十年（下）
+## 美丽岛后二十年（下）
 
 特别来宾：邱议莹（以下简称“邱”）
 
@@ -1314,9 +1296,7 @@
 
 邱：谢谢，谢谢教授。
 
-
-
-与影帝对话（上）
+## 与影帝对话（上）
 
 特别来宾：
 
@@ -1596,9 +1576,7 @@
 
 李：呵呵呵……
 
-
-
-与影帝对话（下）
+## 与影帝对话（下）
 
 特别来宾：
 
@@ -1878,9 +1856,7 @@
 
 李：真高兴，俊雄啊，今天请你到我这边来聊聊天，呵呵呵……谢谢你，谢谢。
 
-
-
-我佩服的戴高乐（一）
+## 我佩服的戴高乐（一）
 
 （注：开场四分钟没录到）
 
@@ -1920,9 +1896,7 @@
 
 这个故事告诉了我们：就是同胞懦夫了，他作战；同胞愚昧了，他先知。就是这两段我们把它完整的讲出来，在下面的节目里面，下一次我要继续告诉大家，如何展示我所崇拜的一位英雄，戴高乐将军。
 
-
-
-我佩服的戴高乐（二）
+## 我佩服的戴高乐（二）
 
 李敖秘密书房！
 
@@ -1970,9 +1944,7 @@
 
 最后大家跟他缠了半天，他取得半年的这个绝对的权力来整顿法国。这个时候戴高乐就东山再起，当时他做的是总理，他遭遇的最大问题，就是他在做总理的第二天就跑到北非。北非发生什么问题啊？北非有一个法国很大的殖民地，这个殖民地发生一个严重的问题，就是叫阿尔及尔。殖民地是法国待在里面已经待了两百多年了，所以法国不肯放弃这个殖民地。可是殖民地的民族跟他不一样，宗教也不一样，回教徒，就跟白种人的法国不断的冲突。法国就面对一个问题，要不要继续干下去，还是退出脱离这个殖民地。戴高乐就做了一个聪明的决定，就是法国过去在帝国主义时代所占领的世界各地区，尤其是非洲的这些领土，我们法国通通撤退，通通让你们独立，我们撤退。这个时候还得了吗？法国的陆军当时为了保护阿尔及尔才把你戴高乐拱出来，现在忽然你老兄放水了，要让这些地区独立，法国人怎么肯呢！就跟他翻脸了，就开始行刺他，整天的搞暴动，整天的搞行刺。可是最后戴高乐平息了这些危机，他终于使法国不再变成了帝国主义者。
 
-
-
-我佩服的戴高乐（三）
+## 我佩服的戴高乐（三）
 
 李敖秘密书房！
 
@@ -2020,9 +1992,7 @@
 
 所以大家看我的话就会看出他的特色来：就是当同胞懦夫了，他作战；同胞愚昧了，他先知；同胞媚外了，他傲骨；同胞投降了，他不屈；同胞迷失了，他把舵；同胞得意了，他隐居；同胞争权了，他不屑；同胞呼唤了，他驰驱；同胞要他回来，十二年后他又回来；同胞胜利了，他远引。为什么要远引呢？最后法国人吃不消他了，他要求公民投票，公民投票没有通过他就不干了。所以同胞胜利了，他远引；同胞世界了，他法兰西。同胞已经完全进入了世界性的法国，同胞忘记了法国的荣誉了，可是他还提倡法国的荣誉。所以最后我说同胞世界了，他法兰西。
 
-
-
-我佩服的戴高乐（四）
+## 我佩服的戴高乐（四）
 
 李敖秘密书房！
 
@@ -2264,9 +2234,7 @@
 
 1970年11月9日，在科龙贝双教堂因心脏病猝发辞世。
 
-
-
-北京法源寺（一）
+## 北京法源寺（一）
 
 李敖秘密书房！
 
@@ -2296,9 +2264,7 @@
 
 当然大陆文学也有问题，我讲过，构成得诺贝尔文学奖的大陆文学家，我认为只有老舍还不错。当然，他死掉了，死掉了就不能做为诺贝尔文学奖的候选人。其他文革以后的大陆文学好不好有很多。可是我讲过，文革以后的大陆文学大部份都是所谓的伤痕文学。邓小平是个强者，他对伤痕文学有八个字的评语，评得非常有趣，邓小平说，文革以后的这些文学，伤痕文学，哭哭啼啼，没有出息！八个字，哭哭啼啼，没有出息！什么意思啊？你们都哭哭啼啼没有出息，这种文学怎么能够代表文学呢？邓小平虽然不是文学家，可是我认为，他对这种软性的文学做了一针见血的批评。一个哭哭啼啼没有出息的文学，严格说起来，也不算是文学。所以在我眼里看起来，真正能够代表中国人的文学作品的，舍李敖之外还有谁哉？
 
-
-
-北京法源寺（二）
+## 北京法源寺（二）
 
 李敖秘密书房！
 
@@ -2320,9 +2286,7 @@
 
 这本书在我看起来，我也一再说过，是中国近代现代长篇小说里面最有气魄的，写得最好的一部小说。当然你说你李敖小说写这么少，没有错，可是我告诉各位，很多名家他的小说写得是很少的，像桑塔耶那，这是了不起的哲学家，美学家，他一辈子也只写一部小说。像哲学家罗素得过诺贝尔文学奖的，他一辈子也写过一部小说，还是匿名的。所以我告诉各位，并不是要写多少，而是说在你写得好不好。这部《北京法源寺》是一部在中国近代现代小说里面，最有气魄的，写得最好的一部小说。这部小说不是我个人赞美它，现在我们也得到国际的评价。现在大家又重新看这部书，我的一位好朋友在台视写编剧的李宁，就是李宁儿。她有一次在这个书第一次出版的时候，她买了一万多块钱，我说，你买这么多干什么？她说，这里面谈佛学的部分太好了，它是善书，以善书的方法，她要到处送给别人，可见这本书的一个特殊性。
 
-
-
-北京法源寺（三）
+## 北京法源寺（三）
 
 李敖秘密书房！
 
@@ -2344,9 +2308,7 @@
 
 这告诉我们，中华人民共和国政府可以通过的书，有这部证明。到了今天，在中国友谊出版公司的编者的眼里，觉得我们要紧一下，就删掉了。这个故事告诉了我们，就是刚刚我所说的，有悬崖理论的时候，就没有真正的言论自由。而这个没有言论自由的原因呢，不完全在政府打压，而是你编者，报纸的编辑，必要时报纸的社长，他们本身内心的恐惧也构成了一个言论自由的一个网，来打压言论自由。所以我觉得很好笑，这有趣的现象，同样一个中华人民共和国，同样在北京，两个出版社出同一本书，一个就要删，一个就可以不删。结果那个不删的人，书也没有被查禁，那你删的什么意思呢？证明你的判断增加了悬崖理论的一个最有趣的例子，下一次呢，我再陆续跟大家谈这方面的故事。
 
-
-
-北京法源寺（四）
+## 北京法源寺（四）
 
 李敖秘密书房！
 
@@ -2370,9 +2332,7 @@
 
 这就是为什么我写的第一章，看到没有，由神秘的棺材这部分转到了悯忠寺。后面就是第一章悯忠寺，然后再从悯忠寺的历史向回追溯。悯忠寺就是唐太宗所悯念悯怀陪他作战的这些将军们，打高丽，打韩国，打高丽的这个故事。打仗打败了，后来这批人回到了幽州，幽州就是当时的北京，唐朝的北京。唐太宗为了纪念这些陪他作战的这些战士们，袍泽们，英雄们，他盖了一个庙，就是悯忠寺，就是纪念怀念这些老战士的，就是当时唐太宗的忠烈祠。所以后来我的第一章就从悯忠寺写起，这个一开始为什么要写这神秘的棺材呢？这就是小说的技巧，一开始引起你注意，怎么搞的一个棺材，这么神秘的棺材，大家夜里去收尸。一个人被千刀万剐以后，然后有神秘的黑衣人跑去收尸，尸体收了以后，然后把尸体抬抬抬，抬走了，抬到一个神秘的地方，装在棺材里，又把它棺材抬过来，抬到一个庙里。所以呢，这是一个小说的悬疑的技巧，就是一开始引起你的怀疑，引起你的好奇，怎么回事啊？进入这个小说，这是一个基本的小说技巧。我在未来的节目里面，再陆续跟大家谈一谈《北京法源寺》。
 
-
-
-北京法源寺（五）
+## 北京法源寺（五）
 
 李敖秘密书房！
 
@@ -2394,9 +2354,7 @@
 
 所以我这个小说在这方面布局里面，拼命穿插这种内心的冲突和现状的冲突，这一部分没有人比我表达的更好，而这些假设性的情况也是非常动人的。我特别向大家推荐《北京法源寺》的这一部分的故事。
 
-
-
-北京法源寺（六）
+## 北京法源寺（六）
 
 李敖秘密书房！
 
@@ -2420,9 +2378,7 @@
 
 所以我特别举这个例子来看，何尝不是借古讽今呢？我们可以看到戊戌政变的一代，他们牺牲的是自己。到了熊十力参加革命，李大钊，董必武，最后也形成了李十力，他们这一代的人革命。至少李十力他也牺牲的是自己，李大钊牺牲的是自己。再往后去，我们可以看到很多革命者牺牲的固然是自己，可是也牺牲了很多别人。可是到台湾来以后，自己完全不牺牲了，牺牲的是别人。我再重复一遍，早期的革命派，改良派，牺牲的是自己；到后来，牺牲自己也牺牲别人，牺牲自己在所不惜，牺牲别人也在所不惜；再后一代的人，自己都不牺牲了，牺牲的是别人。今天我们看到了美丽岛这批人，就是美丽岛的律师群，就是不牺牲自己而牺牲别人的一批人，我们看得非常的清楚。
 
-
-
-北京法源寺（七）
+## 北京法源寺（七）
 
 李敖秘密书房！
 
@@ -2448,9 +2404,7 @@
 
 所以我们整个的故事就结束在这个地方，就是从一个北京法源寺，庙里面，看到人世的兴亡。在这人世的兴亡里面，我们看到曾经有那么多的英雄豪杰走过，这也就是我这本书的特色。我这本书里面没有女人，唯一的一个女人还是个坏女人，就是西太后。她也没有算是怎么了不得的出现，换句话说，这本书整个都是一个男人的，男子汉的，阳刚的，壮烈的，勇敢的，一本小说，它充分代表了我的思想。所以我认为大家真要买一本这个小说来看看，并且告诉你，除了剧情以外，对话以外，它的中文是最好的。
 
-
-
-中天书坊——李敖书房（上）
+## 中天书坊——李敖书房（上）
 
 旁白：古今中外大文豪，有人爱作秀，有人爱呛声。今天的出风头单元，让你看看李敖大师到底有什么本事，让他傲视文坛！
 
@@ -2492,9 +2446,7 @@
 
 旁白：李敖引起你的兴趣了吧！下周带您看看李敖的书房究竟长得什么样子！
 
-
-
-中天书坊——李敖书房（下）
+## 中天书坊——李敖书房（下）
 
 旁白：傲视文坛的李敖大师有一个鲜为人知的秘密书房，占地六十坪。里面除了有李敖收集珍藏的各式各样宝贝，还有陪伴大师一生很重要的图片，数十年来从未曝光过。今天读书地图独家为您揭开李敖秘密书房的神秘面纱。
 
@@ -2554,9 +2506,7 @@
 
 李：因为帮忙的话，这个男生会搞得乱七八糟，女生也会另外一种乱七八糟，呵呵呵呵！
 
-
-
-对话学习专家戴维思
+## 对话学习专家戴维思
 
 李敖（以下简称李）：今天，请来一个特别的嘉宾，他就是戴维思先生。他小的时候生活在香港，后来到了美国，现在在台湾。他有一个公司特别提倡如何用有效率的方法，来训练你的语言能力和训练你的思考方法。我李敖呢，坦白说感到怀疑。原因就是说我自己从来没有经过这种方法训练而变成一个土法炼钢式的人物。当然，我也会很注意这方面的发展。譬如说，我是反对速读的，原因就是速读———我认为———读的结果就是那句老话：小和尚念经———有口无心。他们读得很快，可是真正的精髓反倒不能掌握。像我读书，从来不用速读的。我读书的效果超过了一目十行，甚至一目二十行，可是方法不是速读的方法。所以，我很感兴趣，看看戴维思先生，他们怎么样地来推动他们这种新的方法。欢迎你！
 
@@ -2605,6 +2555,3 @@ OK，所以我们听一听，大概十几二三十个，他问我们想到什么
 戴：Thankyou！
 
 戴维思简介：学习素质培养专家、《这样学习最有效》的作者，现任戴维思国际学习机构总裁、思达迪学习法亚洲首席顾问，被誉为“新时代学习教练”、“记忆大师”。
-
-
-
