fix: 常走为带走

--- a/04.小说剧本类/上山上山爱.md
+++ b/04.小说剧本类/上山上山爱.md
@@ -2496,7 +2496,7 @@
 
 第二十七片。
 
-永远没有过去式。小葇终于同意我用拍立得为她照了三张裸照。裸照使过去式永远变成现在式，它青春永驻、它美丽长存照好以后，我自动放弃所有权，我说她离开我的时候，可以常走。但小葇笑了。“能带走的，我都不带；不能带走的，都愿留给你。”
+永远没有过去式。小葇终于同意我用拍立得为她照了三张裸照。裸照使过去式永远变成现在式，它青春永驻、它美丽长存照好以后，我自动放弃所有权，我说她离开我的时候，可以带走。但小葇笑了。“能带走的，我都不带；不能带走的，都愿留给你。”
 
 第二十八片。
 
