--- a/08.书信函件类/坐牢家爸爸给女儿的八十封信.md
+++ b/08.书信函件类/坐牢家爸爸给女儿的八十封信.md
@@ -381,17 +381,17 @@ Mrs. S. J. Hale 曾写过一首有名的儿歌叫《玛莉有一只小羊》（M
 
 亲爱的小文：
 
-你看这画片上的两只小老虎多可爱。那头白的很少有，值一万美金，并且愈大愈贵。老虎只在亚洲才有，印度、中国、伊朗（就是10月21日信上跟你提到过的天方）、日本，都有。老虎可以长到四五百磅，能爬树、会游泳，虽然狮子是“百兽之王”（kingofbeasts），但专家说老虎比狮子还有力量。
+你看这画片上的两只小老虎多可爱。那头白的很少有，值一万美金，并且愈大愈贵。老虎只在亚洲才有，印度、中国、伊朗（就是 10 月 21 日信上跟你提到过的天方）、日本，都有。老虎可以长到四五百磅，能爬树、会游泳，虽然狮子是“百兽之王”（king of beasts），但专家说老虎比狮子还有力量。
 
-因为老虎厉害，所以中国人说惹厉害的人叫“捋虎须”，美国人则说“拧狮子尾巴”（twistlion'stail），老虎厉害，惹了它就收不了场，所以中国有成语说“骑虎难下”Oncemounteditishardtogetoff，也叫“势成骑虎”Likeridingontiger。“捉虎容易放虎难”It'seasiertocatchatigerthantosetitfree，英文也有一句话说Supposingyoumissyourtiger，heisnotlikelytomissyou.（你打不着老虎，老虎不见得吃不着你）。
+因为老虎厉害，所以中国人说惹厉害的人叫“捋虎须”，美国人则说“拧狮子尾巴”（twist lion's tail）。老虎厉害，惹了它就收不了场，所以中国有成语说“骑虎难下”​Once mounted it is hard to get off，也叫“势成骑虎”​Like riding on tiger。“捉虎容易放虎难”​It's easier to catch a tiger than to set it free，英文也有一句话说 ​Supposing you miss your tiger, he is not likely to miss you.​（你打不着老虎，老虎不见得吃不着你）。
 
-惹老虎虽然危险，但人间有很多事要冒险才有收获，中国话说“不入虎穴，焉得虎子”（“不到老虎窝里去，哪里找得到小老虎？）也正是英文中Nothingventure，nothinghave的意思。
+惹老虎虽然危险，但人间有很多事要冒险才有收获，中国话说“不入虎穴，焉得虎子”（“不到老虎窝里去，哪里找得到小老虎？”）也正是英文中 ​Nothing venture, nothing have 的意思。
 
-中国人说老虎厉害，不但人怕它，鬼也怕它。有一种鬼叫“伥”，神话里说这种鬼专门听老虎使唤，于是就出来一句成语叫“为虎做伥”，意思就是帮着坏东西做坏事（tohelpanevilpersondoevil）。
+中国人说老虎厉害，不但人怕它，鬼也怕它。有一种鬼叫“伥”，神话里说这种鬼专门听老虎使唤，于是就出来一句成语叫“为虎做伥”，意思就是帮着坏东西做坏事（to help an evil person do evil）。
 
-猎人打老虎，常把自己装在笼子里，再把笼子捆在象背上，这样老虎就咬不到他了。有一句英文很好玩：Thosewhogotigerhuntingshouldrememberthattherearetigersandtigers.这意思并不是“打老虎要记着老虎多得很”，而是“打老虎要记着老虎有各式各样的——有好打的，有难打的。”学英文要不马虎，才能学好。
+猎人打老虎，常把自己装在笼子里，再把笼子捆在象背上，这样老虎就咬不到他了。有一句英文很好玩：​Those who go tiger hunting should remember that there are tigers and tigers. 这意思并不是“打老虎要记着老虎多得很”，而是“打老虎要记着老虎有各式各样的——有好打的，有难打的。”学英文要不马虎，才能学好。
 
-爸爸1973年12月9日
+爸爸 1973 年 12 月 9 日
 
 ## 十二、你送神像我搭台
 
