--- a/08.书信函件类/坐牢家爸爸给女儿的八十封信.md
+++ b/08.书信函件类/坐牢家爸爸给女儿的八十封信.md
@@ -397,19 +397,19 @@ Mrs. S. J. Hale 曾写过一首有名的儿歌叫《玛莉有一只小羊》（M
 
 亲爱的小文：
 
-21日收到你与姥姥5、6日的信，知道你们在纽约玩得很开心。纽约的外号叫“沟泽姆”Gotham，Gotham在英国叫“沟特姆”，是一个傻瓜们住的村子。最早住在纽约的人据说傻不鸡鸡，所以纽约就被叫做Gotham，纽约人也被叫做“沟泽麦持”Gothamite，有一句英文成语叫“沟泽姆的聪明人”wisemanofGotham，就是指傻瓜fool。纽约人的正式称呼叫NewYorker，翻成中文，正好是“纽约客”，妈妈是NewYorker，六姑他们也是NewYorker，有一个有名的杂志也叫ThenewYorker。
+21 日收到你与姥姥 5、6 日的信，知道你们在纽约玩得很开心。纽约的外号叫“沟泽姆”Gotham，Gotham 在英国叫“沟特姆”，是一个傻瓜们住的村子。最早住在纽约的人据说傻不鸡鸡，所以纽约就被叫做 Gotham，纽约人也被叫做“沟泽麦持”Gothamite，有一句英文成语叫“沟泽姆的聪明人”​wise man of Gotham，就是指傻瓜 fool。纽约人的正式称呼叫 New Yorker，翻成中文，正好是“纽约客”，妈妈是 New Yorker，六姑他们也是 New Yorker，有一个有名的杂志也叫 ​The New Yorker。
 
-纽约共分五个区，六姑住的皇后区（Queens）最大（Queen有时是女王，有时是皇后），你们去的拉加第亚机场，就在皇后区，LaGuardia是以前的纽约市长，做了十一年。另有一个比拉加第亚机场大九倍的肯尼迪国际机场TheJohnF.KennedyInternationalAirport真也在皇后区。
+纽约共分五个区，六姑住的皇后区（Queens）最大（Queen 有时是女王，有时是皇后），你们去的拉加第亚机场，就在皇后区，LaGuardia 是以前的纽约市长，做了十一年。另有一个比拉加第亚机场大九倍的肯尼迪国际机场 ​The John F. Kennedy International Airport 也在皇后区。
 
-从皇后区向西南走，就是布鲁克林区Brooklyn。由布鲁克林到曼哈顿有三座吊桥（suspensionbridge），你们走的布鲁克林大桥TheBrooklynBridge有九十年历史，资格最老，花了1500万美金，另有一座比这桥长两倍半的维拉扎诺“峡”桥Verrazano-NarrowsBridge，自布鲁克林到（Richmond区）StatenIsland，4260英尺，是全世界最长的吊桥，值3亿2500万美金，有九年历史。维拉扎诺是五百年前的意大利海盗，到过纽约，后来被吊死。
+从皇后区向西南走，就是布鲁克林区 Brooklyn。由布鲁克林到曼哈顿有三座吊桥（suspension bridge），你们走的布鲁克林大桥 ​The Brooklyn Bridge 有九十年历史，资格最老，花了 1500 万美金，另有一座比这桥长两倍半的维拉扎诺“峡”桥 ​Verrazano-Narrows Bridge，自布鲁克林到（Richmond 区）Staten Island，4260 英尺，是全世界最长的吊桥，值 3 亿 2500 万美金，有九年历史。维拉扎诺是五百年前的意大利海盗，到过纽约，后来被吊死。
 
-曼哈顿区Manhattan只占纽约的十分之一，只有31平方英里大。350年前由荷兰人从印第安人手里买来，用的是念珠（beads）、布等，加在一起不到二十四块美金。现在这岛和房子加在一起，却值300亿美金了。从最南的Battery公园可看到的自由神像TheStatueofLiberty，是88年前法国送的，法国送的只是神像，值25万美金。美国人自己掏钱盖了像脚下面的台子（pedestal），又花了28万，一共53万。可以盖半座台北的水晶大厦。
+曼哈顿区 Manhattan 只占纽约的十分之一，只有 31 平方英里大。350 年前由荷兰人从印第安人手里买来，用的是念珠（beads）、布等，加在一起不到二十四块美金。现在这岛和房子加在一起，却值 300 亿美金了。从最南的 Battery 公园可看到的自由神像 ​The Statue of Liberty，是 88 年前法国送的，法国送的只是神像，值 25 万美金。美国人自己掏钱盖了像脚下面的台子（pedestal），又花了 28 万，一共 53 万。可以盖半座台北的水晶大厦。
 
-美国在第二次世界大战，花了3410亿，可以买十一个曼哈顿，你说打仗多费钱！
+美国在第二次世界大战，花了 3410 亿，可以买十一个曼哈顿，你说打仗多费钱！
 
-有一种鸡尾酒，就叫Manhattans，甜的，有颗小樱桃浮在上面。
+有一种鸡尾酒，就叫 Manhattans，甜的，有颗小樱桃浮在上面。
 
-爸爸1973年12月23日午前
+爸爸 1973 年 12 月 23 日午前
 
 ## 十三、千年王八万年龟
 
