--- a/08.书信函件类/坐牢家爸爸给女儿的八十封信.md
+++ b/08.书信函件类/坐牢家爸爸给女儿的八十封信.md
@@ -415,21 +415,19 @@ Mrs. S. J. Hale 曾写过一首有名的儿歌叫《玛莉有一只小羊》（M
 
 亲爱的小文：
 
-中国有一句俗话叫“千年王八万年龟”，表示乌龟活得很长，但据动物学家说，乌龟只活一百多年。乌龟在一千多年前，本不是骂人的字眼，那时候祝人长寿都说“龟龄”（long-livedliketheturtle），有人名字叫“龟年”。中国古人常烧乌龟，看背上的裂纹，用来算命，中国字中“用”这个字，古写是（打不出），就表示一根铁条侧面插进龟背（打不出）去烧，烧出来的纹如吉祥，就可以“用”了。
+中国有一句俗话叫“千年王八万年龟”，表示乌龟活得很长，但据动物学家说，乌龟只活一百多年。乌龟在一千多年前，本不是骂人的字眼，那时候祝人长寿都说“龟龄”（long-lived like the turtle），有人名字叫“龟年”。中国古人常烧乌龟，看背上的裂纹，用来算命，中国字中“用”这个字，古写是𤰆，就表示一根铁条侧面插进龟背𤰆去烧，烧出来的纹如吉祥，就可以“用”了。
 
-一般来说，turtle是指海龟，就是鳖，也叫甲鱼（鳖中有一种叫玳瑁：hawksbill最有名，也叫“陆龟壳海龟”tortoise-shellturtle），tortoise是指陆龟，不过大家也随使用。乌龟有的只活在水里，有的只活在陆上，有的水陆两“用”。乌龟虽然是冷血动物cold-bloodedanimals，可是它却要住在暖和的地方。母乌龟下了蛋，就不管了，它让太阳光去孵这些蛋，所以小乌龟从来不知道爸爸妈妈是谁。
+一般来说，turtle 是指海龟，就是鳖，也叫甲鱼（鳖中有一种叫玳瑁：hawksbill 最有名，也叫“陆龟壳海龟”tortoise-shell turtle），tortoise 是指陆龟，不过大家也随使用。乌龟有的只活在水里，有的只活在陆上，有的水陆两“用”。乌龟虽然是冷血动物 cold-blooded animals，可是它却要住在暖和的地方。母乌龟下了蛋，就不管了，它让太阳光去孵这些蛋，所以小乌龟从来不知道爸爸妈妈是谁。
 
-爸爸过去在澎湖当排长，夜里睡在一间据说闹鬼的房子里，房后有一扇老是关着的小门，当天晚上老是有东西在挤这扇门。到第二天天亮了一看，原来是一只大海龟。捉乌龟，尤其是捉大海龟，非常简单，只要把它四脚朝天一翻，它就呆在那儿了。所以抓乌龟就叫“翻乌龟”turnturtle，任何东西把它底部朝天翻过来，也叫turnturtle。
+爸爸过去在澎湖当排长，夜里睡在一间据说闹鬼的房子里，房后有一扇老是关着的小门，当天晚上老是有东西在挤这扇门。到第二天天亮了一看，原来是一只大海龟。捉乌龟，尤其是捉大海龟，非常简单，只要把它四脚朝天一翻，它就呆在那儿了。所以抓乌龟就叫“翻乌龟”turn turtle，任何东西把它底部朝天翻过来，也叫 turn turtle。
 
 大的乌龟可以让一个人骑在背上。乌龟的壳就是它的家——它的活动房屋。
-
-乌龟因为爬得慢，所以任何慢动作的人也叫tortoise。
-
+乌龟因为爬得慢，所以任何慢动作的人也叫 tortoise。
 中文中“龟裂”的龟字不念“归”，念“君”。
 
-爸爸1973年12月30日
+爸爸 1973 年 12 月 30 日
 
-妈妈11月20号的信、姥姥12月13号的信，都收到了。
+妈妈 11 月 20 号的信、姥姥 12 月 13 号的信，都收到了。
 
 ## 十四、不飞的鸟
 
