--- a/08.书信函件类/坐牢家爸爸给女儿的八十封信.md
+++ b/08.书信函件类/坐牢家爸爸给女儿的八十封信.md
@@ -435,25 +435,20 @@ Mrs. S. J. Hale 曾写过一首有名的儿歌叫《玛莉有一只小羊》（M
 
 鸡鸭虽然不飞，但有时候也能张开翅膀飞一小段，意思意思，所以也叫做鸟。但世界上有几种连意思意思都不会的“鸟”，那就是鸵鸟（ostrich，世界上最大的鸟），鸸鹋（emu），企鹅（penguin），和鹬鸵（kiwi），它们的一些特色，爸爸造了一个表给你看：
 
-ostrich/emu/penguin/kiwi
+ostrich / emu / penguin / kiwi
 
-飞：不会/不会/不会/我也不会
+飞：不会 / 不会 / 不会 / 我也不会
+跑：快极了，一小时跑 40 英里 / 一小时跑 30 英里 / 慢死了 / 慢死了
+大小：300 磅到 1000 磅 / 100 磅 / 15 磅到 100 磅 / 像鸡一般大
+产地：最大的只 Madagascar 马达加斯加（世界第四大岛）有 / 中澳洲有 / 南极最多 / 只纽西兰有
+孵蛋：白天母的孵，晚上公的孵 / 母的管生不管孵，公的只好孵 / 母的管生不管孵，公的只好孵（不吃东西，孵两个月） / 母的说“反正我不孵，要孵你孵”，于是公的只好孵（75 天）
+各有千秋：公的可以讨小老婆。传说被追得没法时，把头钻到沙子里，自己只要看不见敌人，就放心了，不管敌人看不看到它。这种不肯正视的自欺，英文叫 ostrich-like（事实上这传说不对，走投无路时，它会踢人，并不藏头露尾。） / 空白 / 会游泳，游得很棒，吃鱼。不怕冷，孵出小企鹅就好像孵出一件皮大衣。南极冷的冬天要到零下 40 度至 80 度以下，但是公企鹅孵小企鹅体温比人还高。企鹅不大认得清男女，公企鹅如认为某一只企鹅好像是母的，它就找一块小石头投到对方面前，如果对方是母的，便接受小石头做礼物；如果对方是公的，便有权为这一误会发脾气，便有权咬它，它要甘心被咬，不能还嘴。 鼻孔长在嘴前端，别的鸟的鼻孔都长在嘴后端。空军中地勤人员（不飞的）就被挖苦叫 kiwi。
 
-跑：快极了，一小时跑40英里/一小时跑30英里/慢死了/慢死了
+不能飞的鸟另外还有澳洲的食火鸡（cassowary）、南美的三趾鸵鸟（rhea）。
 
-大小：300磅到1000磅/100磅/15磅到100磅/像鸡一般大
+爸爸 1974 年 1 月 6 日
 
-产地：最大的只Madagascar马达加斯加（世界第四大岛）有/中澳洲有/南极最多/只纽西兰有
-
-孵蛋：白天母的孵，晚上公的孵/母的管生不管孵，公的只好孵/母的管生不管孵，公的只好孵（不吃东西，孵两个月）/母的说“反正我不孵，要孵你孵”，于是公的只好孵（75天）
-
-各有千秋：公的可以讨小老婆。传说被追得没法时，把头钻到沙子里，自己只要看不见敌人，就放心了，不管敌人看不看到它。这种不肯正视的自欺，英文叫ostrichlike（事实上这传说不对，走投无路时，它会踢人，并不藏头露尾。）/空白/会游泳，游得很棒，吃鱼。不怕冷，孵出小企鹅就好像孵出一件皮大衣。南极冷的冬天要到零下40度至80度以下，但是公企鹅孵小企鹅体温比人还高。企鹅不大认得清男女，公企鹅如认为某一只企鹅好像是母的，它就找一块小石头投到对方面前，如果对方是母的，便接受小石头做礼物；如果对方是公的，便有权为这一误会发脾气，便有权咬它，它要甘心被咬，不能还嘴。/鼻孔长在嘴前端，别的鸟的鼻孔都长在嘴后端。空军中地勤人员（不飞的）就被挖苦叫kiwi。
-
-不能飞的鸟另外还有澳洲的食火鸡（cassowary）、南美的三趾驼鸟（rhea）。
-
-爸爸1974年1月6日
-
-你们20日的信5日收到。要写信托一朋友买书，下次再写给姥姥。
+你们 20 日的信 5 日收到。要写信托一朋友买书，下次再写给姥姥。
 
 ## 十五、你杀鹅我就杀鸡
 
