--- a/08.书信函件类/坐牢家爸爸给女儿的八十封信.md
+++ b/08.书信函件类/坐牢家爸爸给女儿的八十封信.md
@@ -454,27 +454,26 @@ ostrich / emu / penguin / kiwi
 
 亲爱的小文：
 
-中文里说人走起路来慢吞吞的，又摇摇晃晃的，叫“鹅行鸭步”，英文里把鹅走路描写军队检阅时走的“正步”——goosestep，中文里说冷、害怕或恶心的时候起的“鸡皮疙瘩”，英文里叫“鹅肉”gooseflesh——你鸡我就鹅，英文又跟中文捣起蛋来了。
+中文里说人走起路来慢吞吞的，又摇摇晃晃的，叫“鹅行鸭步”，英文里把鹅走路描写军队检阅时走的“正步”——goose step，中文里说冷、害怕或恶心的时候起的“鸡皮疙瘩”，英文里叫“鹅肉”​goose flesh——你鸡我就鹅，英文又跟中文捣起蛋来了。
 
-伊索寓言里有一个故事说，一个人有一只会生金蛋的鹅，但每天只生一个，这人嫌生的慢，拿刀把鹅杀了取蛋，结果鹅死了，蛋也没了，这个故事写人又笨又贪心。由这个故事，出来一句英文成语，叫
+伊索寓言里有一个故事说，一个人有一只会生金蛋的鹅，但每天只生一个，这人嫌生的慢，拿刀把鹅杀了取蛋，结果鹅死了，蛋也没了，这个故事写人又笨又贪心。由这个故事，出来一句英文成语，叫：
 
-Donotkillthegoosethatlaysthegoldeneggs．
+Do not kill the goose that lays the golden eggs.
 
-意思就是“别杀下金蛋的鹅”，“别断了财路”，“别砍摇钱树”。在中文里，也有一句“杀鸡取卵”（tokillthehentoeggs）的话，正跟英文不谋而合——你杀鹅我就杀鸡，这回是中文跟英文捣起蛋来了。
+意思就是“别杀下金蛋的鹅”，“别断了财路”，“别砍摇钱树”。在中文里，也有一句“杀鸡取卵”（to kill the hen to get eggs）的话，正跟英文不谋而合——你杀鹅我就杀鸡，这回是中文跟英文捣起蛋来了。
 
-鹅既然杀了，就可煮了吃，英文“煮了他的鹅”的意思是“他完蛋了”（名誉毁了、计划垮了、机会丢了等）。Hisgoosewascookedwhentheyfoundthestolengemsinhispocket.（当他们发现丢的宝石在他口袋里，他完蛋了。）
+鹅既然杀了，就可煮了吃，英文“煮了他的鹅”的意思是“他完蛋了”（名誉毁了、计划垮了、机会丢了等）。​His goose was cooked when they found the stolen gems in his pocket.（当他们发现丢的宝石在他口袋里，他完蛋了。）
 
-鹅蛋gooseegg，就是得了零分，也叫鸭蛋duck-egg，就是中文“吃鸭蛋”。
+鹅蛋 ​goose egg，就是得了零分，也叫鸭蛋 ​duck-egg，就是中文“吃鸭蛋”。
 
-骂人笨，就用到鹅。assillyasgoose（像鹅一样笨）、Heisquiteagoose．（他是一个笨蛋）。
+骂人笨，就用到鹅。​as silly as goose​（像鹅一样笨）、He is quite a goose.​（他是一个笨蛋）。
+骂人胆小说这人连向鹅说声“呸！”都不敢。​unable to say “bo” to a goose.
 
-骂人胆小说这人连向鹅说声“呸！”都不敢。unabletosay“bo”toagoose．
+钢笔最早是用鹅毛削的，叫鹅毛笔 ​goose quill，有两千年历史了，钢笔 ​pen 在拉丁文里是 ​penna，就是羽毛 ​feather 的意思。中文“千里送鹅毛”意思是礼轻意重。
 
-钢笔最早是用鹅毛削的，叫鹅毛笔goosequill，有两千年历史了，钢笔pen在拉丁文里是penna，就是羽毛feather的意思。中文“千里送鹅毛”意思是礼轻意重。
+爸爸 1974 年 1 月 26 日
 
-爸爸1974年1月26日
-
-你和姥姥9、10号的信收到。21号收到的，因过旧年，收到得比较快。
+你和姥姥 9、10 号的信收到。21 号收到的，因过旧年，收到得比较快。
 
 ## 十六、原子弹与沉鱼落雁
 
